--- a/src/phonebook/messages/sucessMessage.module.css
+++ b/src/phonebook/messages/sucessMessage.module.css
@@ -1,5 +1,5 @@
-.par {
-  background-color: crimson;
+.suc {
+  background-color: rgb(34, 151, 10);
   color: #ffffff;
   font-size: 20px;
   font: 500;
